--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+Các kiến thức đã được học ở module1:
+1,Thuật toán:
+- Pseudo-code: Mã giả
+- flowchart: Lưu đồ
 
 
 
