--- a/index.html
+++ b/index.html
@@ -7,9 +7,28 @@
 </head>
 <body>
 Các kiến thức đã được học ở module1:
-1,Thuật toán:
+1, Thuật toán
+* Lập trình: tạo chỉ dẫn (các lệnh) để ra lệnh cho máy tính hoàn thành 1 công việc nào đó
+* Ngôn ngữ lập trình: là phương tiện để lập trình viên viết lệnh, chỉ dẫn cho máy tính
+* Có nhiều loại ngôn ngữ lập trình như web, mobile, desktop, nhúng...
+* Học lập trình là học tư duy giải quyết vấn đề và học ngôn ngữ lập trình
+* Học ngôn ngữ lập trình là học: tư duy và cú pháp của ngôn ngữ đó
+* Thuật toán: là tập hợp các chỉ thị hay cách thức để giải quyết vấn đề
+
+* Cách mô tả thuật toán(2 cách): Dùng mã giả hoặc dùng lưu đồ.
 - Pseudo-code: Mã giả
++ Mô tả thuật toán bằng ngôn ngữ tự nhiên
++ Thường SD các từ tiếng Anh: Start, Begin, End, If, Else ...
++ Là mã không thực thi được
++ Ai cũng có thể sử dụng được
++ Không có quy định chặt chẽ về cú pháp, gây khó hiểu cho người khác
++ Dài dòng, không cấu trúc
+
 - flowchart: Lưu đồ
++ Sử dụng các kí hiệu được quy định trước để mô tả thuật toán
++ Thống nhất cách sử dụng => các bên hiểu vấn đề dễ hơn
++ Lưu đồ gồm:
+Hình elip, hình chữ nhật, hình bình hành, hình thoi, hình tròn, mũi tên
 
 
 
