--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@ Các kiến thức đã được học ở module1:
 + Lưu đồ gồm:
 Hình elip, hình chữ nhật, hình bình hành, hình thoi, hình tròn, mũi tên
 
+* Git là gì: Git là 1 cách thức để lưu trữ mã nguồn
+- Repository: Là nơi chứa mã nguồn (repository có nghĩa là "kho chứa")
+- Có 2 loại repository: Local repository và Remote repository
+- Local Repository: Là nơi lưu trữ mã nguồn trên máy tính của lập trình viên
+- Remote Repository: Là nơi lưu trữ mã nguồn ở trên mạng
+- Version (Phiên bản): Là trạng thái mã nguồn ở một thời điểm nhất định nào đó
+- Quản lý Phiên bản mã nguồn: Git không chỉ giúp chúng ta quản lý mã nguồn mà còn quản lý phiên bản mã nguồn.
+Tức là giúp chúng ta làm chủ được từng thay đổi của mã nguồn theo thời gian.
+- Đồng bộ giữa các Repository: phải có cơ chế để đồng bộ giữa các Repository này với nhau, tức là giữ cho mã nguồn ở các Repository này giống hệt nhau.
+Hay nói cách khác, tất cả các Repository này là những bản sao của nhau.
+* Một trang web cơ bản và các thẻ HTML:
+- Khai báo !DOCTYPE html quy định rằng đây là một tài liệu HTML5
+- Phần tử html là phần tử gốc của trang HTML
+- Phần tử head chứa thông tin mô tả về tài liệu hiện tại
+- Phần tử title chứa tiêu đề của tài liệu
+- Phần tử body chứa toàn bộ nội dung của trang web (những gì mà chúng ta nhìn thấy được trên trình duyệt)
+- Phần tử h1 định nghĩa một tiêu đề lớn
+- Phần tử p định nghĩa một đoạn văn.
 
 
 
