html, the a, Git, target

--- a/index.html
+++ b/index.html
@@ -48,6 +48,24 @@ Hay nói cách khác, tất cả các Repository này là những bản sao củ
 - Phần tử body chứa toàn bộ nội dung của trang web (những gì mà chúng ta nhìn thấy được trên trình duyệt)
 - Phần tử h1 định nghĩa một tiêu đề lớn
 - Phần tử p định nghĩa một đoạn văn.
+*  1 trang web được tao nên từ các thẻ HTML: thẻ HTML bao gồm tên thẻ trong 2 dấu ngoặc nhọn.
+- Thẻ title: tiêu đề
+- Thẻ a: liên kết đến 1 trang web href=""
+- Thẻ img: Khai báo hình
+- Thẻ p: đoạn văn bản
+- Thẻ h1-h6: dùng để định nghĩa các tiêu đề, h1 lớn nhất, h6 nhỏ
+- Thẻ hr: tạo 1 đường kẻ ngang
+- Thẻ br: xuống dòng
+- Thẻ pre: hiển thị 1 bài, định nghĩa 1 đoạn văn bản đã được định dạng ,giữ lại các khoảng trắng và xuống dòng
+- Thuộc tính targer của thẻ a:
+_blank - Mở liên kết trong một cửa sổ hoặc một tab mới của trình duyệt
+_self - Mở liên kết trong tab/cửa sổ hiện tại của trình duyệt
+(Không cần khai báo cũng được vì đây là mặc định của thẻ a)
+_parent - Mở liên kết trong parent frame
+_top - Mở liên kết trong cửa sổ chính
+framename - Mở liên kết trong một frame có tên là framename (Tìm hiểu thêm về thẻ frame)
+
+
 
 
 
