--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@ Hay nói cách khác, tất cả các Repository này là những bản sao củ
 *  1 trang web được tao nên từ các thẻ HTML: thẻ HTML bao gồm tên thẻ trong 2 dấu ngoặc nhọn.
 - Thẻ title: tiêu đề
 - Thẻ a: liên kết đến 1 trang web href=""
-- Thẻ img: Khai báo hình
+- Thẻ img: Khai báo hình ảnh
+Thuộc tính src: url của ảnh
+            alt: thay thế cho ảnh khi không hiển thị được( có thể do sai link hay mạng chậm)
 - Thẻ p: đoạn văn bản
 - Thẻ h1-h6: dùng để định nghĩa các tiêu đề, h1 lớn nhất, h6 nhỏ
 - Thẻ hr: tạo 1 đường kẻ ngang
@@ -64,6 +66,36 @@ _self - Mở liên kết trong tab/cửa sổ hiện tại của trình duyệt
 _parent - Mở liên kết trong parent frame
 _top - Mở liên kết trong cửa sổ chính
 framename - Mở liên kết trong một frame có tên là framename (Tìm hiểu thêm về thẻ frame)
+* Thẻ tạo danh sách: ol, ul, li
+* Chú thích trong HTML:
+- Sử dụng để ghi chú
+- Vô hiệu hóa 1 đoạn mã HTML
+* Sử dụng HTML entity: Kí tự đặc biệt trong
+non-breaking space	&nbsp;	&#160;
+<	less than	&lt;	&#60;
+>	greater than	&gt;	&#62;
+&	ampersand	&amp;	&#38;
+"	double quotation mark	&quot;	&#34;
+'	single quotation mark (apostrophe)	&apos;	&#39;
+¢	cent	&cent;	&#162;
+£	pound	&pound;	&#163;
+¥	yen	&yen;	&#165;
+€	euro	&euro;	&#8364;
+©	copyright	&copy;	&#169;
+®	registered trademark	&reg;	&#174;
+* Các hệ thống quản lý mã nguồn và phiên bản:
+- Quản lý phiên bản(mã nguồn): là 1 hệ thống lưu trữ các thay đổi của 1 tệp hay tập hợp các tệp tin ,
+giúp bạn có thể quay lại 1 phiên xác định nào đó sau này
+* Phân loại hệ thống quản lý mã nguồn:
+- Hệ thống quản lý mã nguồn cục bộ:
+- Hệ thống quản lý mã nguồn tập trung:
+- Hệ thống quản lý mã nguồn phân tán: VD Git
+- Form: Biểu , cho phép người dùng nhập dữ liệu và gửi về sever
+- Thuộc tính action: quy định nơi dữ liệu được gửi đến
+- Thuộc tính method: quy định cách thức dữ liệu được gửi lên sever. Có 2 cách thường được SD là POST và
+- GET: Dữ liệu được gửi đi hiển thị trên thanh trình duyệt, thường gửi những dữ liệu nhỏ
+- SET: Dữ liệu được gửi đi không hiển thị trên thanh trình duyệt,
+được sử dụng để gửi những dữ liệu nhạy cảm (như password), thường dùng để gửi những dữ liệu lớn
 
 
 
